[package]
name = "aperture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
regex = "1.5"
lazy_static = "1.4"
url = "2.2"